app/assets/stylesheets/_header.scss
.header {
  @include heavy-font;
  background-color: $header-background-color;
  box-shadow: $shadow-level-4;
  color: $header-font-color;
  font-size: 1rem;
  height: $header-height;
  line-height: $header-height;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;

  &:hover {
    color: $header-font-color;
  }

  .header-content {
    display: flex;
    justify-content: space-between;
    margin: auto;
    width: $page-width;
  }

  .header-icon {
    height: $header-height / 2;
    width: $header-height / 2;
    margin-top: $header-height / 4;
  }

  .identity-name,
  .identity-dob {
    line-height: $header-height / 3;
  }

  .identity-name {
    margin-top: $header-height / 6;
  }

  .header-actions {
    text-align: right;
    position: relative;
  }

  a {
    margin-right: 1.5em;
    vertical-align: top;
    color: $change-theme-button-color;
  }

  .change-theme {
    background-color: $change-theme-button-background-color;
    border-radius: 3px;
    padding: $small-spacing;
    border: 1px solid $change-theme-button-color;
  }
}

